2003-04-11  Borut Razem <borut.razem@siol.net>

	* support/Util/dbuf.c, support/Util/dbuf.h: update to version 1.1.1 - re-added C++ stuff to make it still more portable

2003-04-10  Scott Dattalo  <scott@dattalo.com>

	* src/pic/* Applied the pointer-to-function patch from Steve Tell.
	* src/pic/* Fixed several pointer bugs. (PIC port broke when the ruonly bit was
	 set - this bit used to not be set...).
        * src/pic/gen.c Fixed buf 609268 ==> x = (x+1) & 0xf; generated 
          bad code in PIC Port
        * src/regression/and2.c added to test bug 609268
        * src/regression/Makefile added and2.c to regression test


2003-04-08    <johan@CP255758-A>

	* src/mcs51/gen.c (gen51Code): display reg usage in --icode-in-asm
	* src/mcs51/ralloc.c (serialRegAssign): update the registers in use and save some slocs
	* src/SDCCicode.h: added riu to show the register usage in --icode-in-asm

2003-04-07  Bernhard Held <bernhard@bernhardheld.de>

	* configure.in: fully support prefix, exec_prefix, datadir, docdir;
	fix bug #487815
	* support/cpp2/Makefile.in: fix bug #487815
	* configure: rebuilt from configure.in
	* Makefile.common.in: docdir changed, new path suffixes
	* sdccconf_in.h: new RETSIGTYPE, and other PATHs
	* sdcc_vc_in.h: reflect changes from sdccconf.h
	* src/SDCCglobl.h: remove *SEPARATOR_CHARS, they are now in sdccconf.h
	* src/SDCCutil.h: remove BINDIR hack
	* doc/sdccman.lyx: update new path hierarchy

2003-04-06    Paul Stoffregen <paul@pjrc.com>

	* src/SDCCpeeph.c: added okToRemoveSLOC test

2003-04-06    Paul Stoffregen <paul@pjrc.com>

	* device/lib/printf_fast.c: added leading zero format ("%06d", etc)

2003-04-06    Paul Stoffregen <paul@pjrc.com>

	* src/SDCCpeeph.c: added labelIsReturnOnly test
	* src/mcs51/peeph.def: Peephole 244: replace ljmp to ret with ret

2003-04-05    <johan@balder>

	* src/SDCCcse.c (cseAllBlocks): fixed bug #460088
	* src/SDCCloop.c (DEFSETFUNC): fixed bug #460088